@@ -1,4 +1,4 @@
-/*	$NetBSD: make.h,v 1.104 2018/02/12 21:38:09 sjg Exp $	*/
+/*	$NetBSD: make.h,v 1.105 2020/03/30 02:41:06 sjg Exp $	*/
 
 /*
  * Copyright (c) 1988, 1989, 1990, 1993
@@ -464,7 +464,7 @@ extern pid_t	myPid;
  *	There is one bit per module.  It is up to the module what debug
  *	information to print.
  */
-FILE *debug_file;		/* Output written here - default stdout */
+extern FILE *debug_file;	/* Output written here - default stdout */
 extern int debug;
 #define	DEBUG_ARCH	0x00001
 #define	DEBUG_COND	0x00002
